# larrecodnn

./: CMakeLists.txt
larrecodnn/: CMakeLists.txt
larrecodnn/CVN/interfaces/: ICVNMapper.cxx  PixelMapProducer.h
larrecodnn/HDF5Maker/: CMakeLists.txt  HDF5Maker.fcl  HDF5Maker_module.cc
larrecodnn/HDF5Maker/Tables/: CMakeLists.txt  ChargeHit.cxx  ChargeHit.h  ChargeHitTable.cxx  ChargeHitTable.h  EDep.cxx  EDep.h  EDepTable.cxx  EDepTable.h  Event.cxx  Event.h  EventTable.cxx  EventTable.h  Flash.cxx  Flash.h  FlashTable.cxx  FlashTable.h  Hit.cxx  Hit.h  LDep.cxx  LDep.h  LDepTable.cxx  LDepTable.h  Neutrino.cxx  Neutrino.h  NeutrinoTable.cxx  NeutrinoTable.h  OpHit.cxx  OpHit.h  OpHitTable.cxx  OpHitTable.h  Particle.cxx  Particle.h  ParticleTable.cxx  ParticleTable.h  Spacepoint.cxx  Spacepoint.h  SpacepointTable.cxx  SpacepointTable.h  Table.h  (+2 more)
larrecodnn/ImageMaker/: CMakeLists.txt
larrecodnn/ImagePatternAlgs/Keras/: CMakeLists.txt
larrecodnn/ImagePatternAlgs/Keras/Tools/: CMakeLists.txt
larrecodnn/ImagePatternAlgs/Modules/: CMakeLists.txt  CheckCNNScore_module.cc  EmTrack.h  EmTrackClusterId2outTl_module.cc  EmTrackClusterId3outTl_module.cc  EmTrackMichelIdTl_module.cc  EvaluateROIEff_module.cc  PointIdEffTest_module.cc  RawWaveformDump_module.cc  WaveformRoiFinder_module.cc
larrecodnn/ImagePatternAlgs/NuSonic/Triton/: Span.h  TritonClient.cc  TritonClient.h  TritonData.cc  TritonData.h  triton_utils.cc  triton_utils.h
larrecodnn/ImagePatternAlgs/Tensorflow/Modules/: CMakeLists.txt  EmTrackClusterId2out_module.cc  EmTrackClusterId3out_module.cc  EmTrackMichelId_module.cc  ParticleDecayId_module.cc  PointIdTrainingData_module.cc
larrecodnn/ImagePatternAlgs/Tensorflow/PointIdAlg/: CMakeLists.txt  PointIdAlg.cxx  PointIdAlg.h
larrecodnn/ImagePatternAlgs/Tensorflow/TF/: CMakeLists.txt  tf_graph.cc  tf_graph.h
larrecodnn/ImagePatternAlgs/Tensorflow/Tools/: CMakeLists.txt  PointIdAlgTf_tool.cc  WaveformRecogTf_tool.cc
larrecodnn/ImagePatternAlgs/ToolInterfaces/: IPointIdAlg.h  IWaveformRecog.h
larrecodnn/ImagePatternAlgs/Triton/Tools/: CMakeLists.txt  PointIdAlgSonicTriton_tool.cc  PointIdAlgTriton_tool.cc  WireframeRecogTriton_tool.cc
larrecodnn/ImagePatternAlgs/job/: CMakeLists.txt
larrecodnn/NuGraph/: CMakeLists.txt  NuGraphAnalyzer_module.cc  NuGraphInferenceSonicTriton_module.cc  NuGraphInferenceTriton_module.cc  NuGraphInference_module.cc  nugraph.fcl
larrecodnn/NuGraph/NuGraphTools/: DecoderToolBase.h  FilterDecoder_tool.cc  LoaderToolBase.h  SemanticDecoder_tool.cc  StandardLoader_tool.cc  VertexDecoder_tool.cc  nugraph_decoders.fcl  nugraph_loaders.fcl
larrecodnn/NuGraph/Tools/: CMakeLists.txt  DecoderToolBase.h  FilterDecoder_tool.cc  LoaderToolBase.h  SemanticDecoder_tool.cc  StandardLoader_tool.cc  VertexDecoder_tool.cc  nugraph_decoders.fcl  nugraph_loaders.fcl
ups/: product_deps
